# iwb_project

./: CMakeLists.txt  README.md
include/: ast.h  codegen_decl.h  codegen_expr.h  codegen_stmt.h  codegen_utils.h  compiler.h  error.h  iwb2llvm.h  optimizer.h  symbol_table.h
src/: .codegen_expr.c.swp  ast.c  codegen_utils.c  compiler.c  error.c  main.c  optimizer.c  symbol_table.c
test/: CMakeLists.txt
